[package]
name = "base-defense"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_egui = "0.31.1"
bevy-inspector-egui = { version = "0.28.1" }
serde= "1.0.217"
serde_json="1.0.134"
bevy_prototype_lyon = "0.13.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
indexmap = "2.7.0"
euclid = { version = "0.22.11", features = ["serde"] }
rand = "0.8.5"

[workspace]
resolver = "2"
