[package]
name = "base-defense"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy-inspector-egui = { version = "0.30.0" }
serde = "1.0.219"
serde_json = "1.0.140"
bevy_prototype_lyon = "0.13.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
indexmap = "2.9.0"
euclid = { version = "0.22.11", features = ["serde"] }
rand = "0.9.1"

[workspace]
resolver = "2"
