[package]
name = "base-defense"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
bevy-inspector-egui = { version = "0.36.0" }
serde = "1.0.228"
serde_json = "1.0.149"
bevy_prototype_lyon = "0.16.0"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
indexmap = "2.14.0"
euclid = { version = "0.22.14", features = ["serde"] }
rand = "0.10.1"

[workspace]
resolver = "2"
